[package]
name = "sleigh-config"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mnemonikr/sleigh-config"
description = "Precompiled .sla files and other processor configuration files needed to interface with Ghidra SLEIGH"
categories = ["security", "config", "caching"]
include = [
    "/build.rs",
    "/src/*",
    "/ghidra/Ghidra/Processors/*/data/languages/*",
    "/ghidra/DISCLAIMER.md",
    "/ghidra/NOTICE",
    "/ghidra/LICENSE",
    "/ghidra/licenses/*",
]

[dependencies]

[build-dependencies]
heck = "0.5"
sleigh-compiler = { version = "2.0" }

[features]
# Processors
6502 = []
68000 = []
8048 = []
8051 = []
8085 = []
AARCH64 = []
ARM = []
Atmel = []
BPF = []
CP1600 = []
CR16 = []
DATA = []
Dalvik = []
HCS08 = []
HCS12 = []
JVM = []
Loongarch = []
M16C = []
M8C = []
MC6800 = []
MCS96 = []
MIPS = []
PA-RISC = []
PIC = []
PowerPC = []
RISCV = []
Sparc = []
SuperH = []
SuperH4 = []
TI_MSP430 = []
Toy = []
V850 = []
Xtensa = []
Z80 = []
eBPF = []
tricore = []
x86 = []
