[package]
name = "integration-tests"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mnemonikr/sleigh-config"
publish = false

[dependencies]
sleigh-config = { path = "../sleigh-config", features = ["x86"] }

[dev-dependencies]
libsla = { version = "0.4.1" }

[[test]]
name = "integration-test"
path = "integration-test.rs"
